--- a/static/style.css
+++ b/static/style.css
@@ -73,7 +73,7 @@ html.dark-mode body {
     --status-failure-bg: #7F1D1D; /* Red 900 */
     --status-failure-text: #FECACA; /* Red 200 */
 
-    --bg-code: #374151;
+    --bg-code: #1a2332;
 
     --bg-table-header: #374151;
     --bg-table-hover: #374151;
